Fix some broken style

--- a/css/header.less
+++ b/css/header.less
@@ -40,7 +40,7 @@
 	&.finished-loading {
 		.black-layer {
 			background-color: black;
-			opacity: 0.3;
+			opacity: 0.5;
 		}
 	}
 }
